--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link
 			rel="stylesheet"
 			type="text/css"
-			href="https://saberhosneydev.github.io/nobel/css/style.css"
+			href="//saberhosneydev.github.io/nobel/css/style.css"
 		/>
 		<!-- Primary Meta Tags -->
 		<title>The Nobel Prize Archieve - Saber Hosney</title>
@@ -128,7 +128,7 @@
 				>
 			</p>
 		</div>
-		<script src="https://saberhosneydev.github.io/nobel/js/utility.js"></script>
-		<script src="https://saberhosneydev.github.io/nobel/js/search.js"></script>
+		<script src="//saberhosneydev.github.io/nobel/js/utility.js"></script>
+		<script src="//saberhosneydev.github.io/nobel/js/search.js"></script>
 	</body>
 </html>
