--- a/info.html
+++ b/info.html
@@ -4,11 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=1, initial-scale=1.0" />
 		<title>GreatTitle</title>
-		<link
-			rel="stylesheet"
-			type="text/css"
-			href="https://saberhosneydev.github.io/nobel/css/style.css"
-		/>
+		<link rel="stylesheet" type="text/css" href="./css/style.css" />
 		<!-- Primary Meta Tags -->
 		<title>The Nobel Prize Archieve - Saber Hosney</title>
 		<meta
@@ -73,10 +69,7 @@
 				<a href="/"><h1>the nobel prize</h1></a>
 				<p>
 					for the greatest benefit to humankind
-					<img
-						src="https://saberhosneydev.github.io/nobel/images/signature.svg"
-						alt=""
-					/>
+					<img src="./images/signature.svg" alt="" />
 				</p>
 				<hr />
 			</div>
@@ -129,7 +122,7 @@
 				>
 			</p>
 		</div>
-		<script src="https://saberhosneydev.github.io/nobel/js/utility.js"></script>
-		<script src="https://saberhosneydev.github.io/nobel/js/info.js"></script>
+		<script src="./js/utility.js"></script>
+		<script src="./js/info.js"></script>
 	</body>
 </html>
