--- a/info.html
+++ b/info.html
@@ -66,7 +66,7 @@
 	<body onload="documentReady();loader()">
 		<div class="grid-container">
 			<div class="header">
-				<a href="/"><h1>the nobel prize</h1></a>
+				<a href="./"><h1>the nobel prize</h1></a>
 				<p>
 					for the greatest benefit to humankind
 					<img src="./images/signature.svg" alt="" />
