--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=1, initial-scale=1.0" />
-		<title>GreatTitle</title>
+		<title>The Nobel Prize Archive</title>
 		<link rel="stylesheet" type="text/css" href="./css/style.css" />
 		<!-- Primary Meta Tags -->
 		<title>The Nobel Prize Archieve - Saber Hosney</title>
